# BlackHole

./: .gitignore  CLAUDE.md  DEPLOYMENT-PLAN.md  LICENSE  README.md  SOCIAL-POSTS.md  STRATEGY-RESEARCH.md  STRATEGY.md  requirements.txt
autonomous-agents/: README.md
autonomous-agents/lead-gen-agent/: CLAUDE.md  agent.py  config.json  merge_schools.py  run_top10.py
autonomous-agents/visa-verifier/: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  EXAMPLES.json  LICENSE  README.md  agent.py  config.json  reclassify.py  requirements.txt  run-hourly.bat  status.py  validate.py  verifier.py
autonomous-agents/visa-verifier/output/: validation-issues.json  verified-visas.json
data-products/: README.md
data-products/calcstack/: .gitignore  CLAUDE.md  astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
data-products/calcstack/public/: robots.txt
data-products/calcstack/src/components/: AffiliateCTA.astro
data-products/calcstack/src/layouts/: BaseLayout.astro
data-products/calcstack/src/lib/: affiliates.ts  formatters.ts
data-products/shared/: README.md  ads.html
data-products/techtools365-landing/mockups/: 1-minimal.html  1b-minimal-light.html  1c-minimal-swiss.html  1d-minimal-typographic.html  2-illustrated.html  3-data.html  4-editorial.html  index.html
data-products/techtools365-landing/public/: index.html  robots.txt  sitemap.xml  wrangler.jsonc
data-products/techtools365-landing/scripts/: sync-shell.py
data-products/toolversus/: hugo.toml  hugo_stats.json  wrangler.jsonc
data-products/toolversus/content/: about.md  contact.md  privacy.md
data-products/toolversus/layouts/: index.html
data-products/toolversus/public/: _redirects  index.html  index.xml  sitemap.xml  wrangler.jsonc
data-products/toolversus/static/: robots.txt
data-products/visa-matrix-2026/: README-buyer.txt  README.md  VERSION  bulk-matrix.csv  generate.py  report.html  residence-permits.csv  verified-matrix.csv
data-products/visapathway/: .gitignore  astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
data-products/visapathway/public/: robots.txt
data-products/visapathway/scripts/: fix-trailing-slashes.py  process_visa_data.py
engine/: __init__.py  invoices.py  leads.py
freelance-bootstrap/: BLUEPRINT.md  run.py
freelance-bootstrap/engine/: content.py  crm.py  outreach.py  proposals.py
freelance-bootstrap/templates/: emails.json
fulfillment/: LISTINGS.md  README.md  common.py  leads_maps.py  linkedin_jobs.py  serp_report.py  uae_properties.py
mcp-servers/: BLOG_POST.md  MARKETING.md  README.md
mcp-servers/captcha-solver/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Dockerfile.apify  README.md  api.py  openapi.json  pyproject.toml  requirements-full.txt  requirements.txt  router.py  server.py  solver.py  vision.py
mcp-servers/captcha-solver/.actor/: actor.json  input_schema.json  pay_per_event.json
mcp-servers/captcha-solver/apify-actor/: .dockerignore  Dockerfile  README.md  requirements.txt
mcp-servers/captcha-solver/apify-actor/.actor/: actor.json  input_schema.json
mcp-servers/captcha-solver/apify-actor/src/: main.py
mcp-servers/captcha-solver/apify-actor/storage/key_value_stores/default/: INPUT.json
mcp-servers/captcha-solver/core/: __init__.py  types.py
mcp-servers/captcha-solver/solvers/: __init__.py  base.py  clip_canvas.py  clip_grid.py  token_api.py  vlm.py
mcp-servers/captcha-solver/tests/: test_concurrency.py
mcp-servers/captcha-solver/vision/: __init__.py  clip.py  vlm_client.py
mcp-servers/google-maps/: .gitignore  CLAUDE.md  Dockerfile  README.md  enrichment.py  export.py  models.py  pyproject.toml  retry.py  scraper.py  server.py  smithery.yaml  stealth_browser.py  test_debug_selectors.py  test_live.py
mcp-servers/google-maps/apify-actor/: Dockerfile  README.md
mcp-servers/google-maps/apify-actor/.actor/: actor.json  input_schema.json
mcp-servers/google-maps/apify-actor/src/: __main__.py  main.py
mcp-servers/linkedin/: scraper.py
mcp-servers/serp-scraper/: CLAUDE.md  README.md  models.py  pyproject.toml  scraper.py  server.py  smithery.yaml  stealth_browser.py  test_live.py
mcp-servers/serp-scraper/apify-actor/: Dockerfile  README.md
mcp-servers/uae-realestate/: CLAUDE.md  README.md  analytics.py  captcha.py  models.py  pyproject.toml  server.py  slug_discovery.py  slug_registry.py  slugs.json  stealth_browser.py
mcp-servers/uae-realestate/scrapers/: __init__.py  bayut.py  dubizzle.py  propertyfinder.py
scripts/: fix-title-case-edges.py  remove-github-refs.py  title-case-headings.py  update-name-email.py
site/: index.html
(+153 files in other folders)
