[project]
name = "captcha-solver-mcp"
version = "0.1.0"
description = "AI-powered CAPTCHA solver MCP server using CLIP vision model - no API keys needed"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["mcp", "captcha", "hcaptcha", "recaptcha", "clip", "vision", "ai", "solver"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "pillow>=10.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40.0",
]

[project.scripts]
captcha-solver-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
