[project]
name = "google-maps-mcp"
version = "0.2.0"
description = "Google Maps lead generation MCP server -- search, enrich with emails/socials, score leads, export CSV"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "dppalukuri"}]
keywords = [
    "mcp", "google-maps", "lead-generation", "scraping",
    "email-finder", "business-search", "ai-agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "playwright>=1.40.0",
    "playwright-stealth>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/dppalukuri/BlackHole/tree/main/mcp-servers/google-maps"
Repository = "https://github.com/dppalukuri/BlackHole"
Issues = "https://github.com/dppalukuri/BlackHole/issues"

[project.scripts]
google-maps-mcp = "server:mcp.run"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
